// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`location-management/src/components/LocationUnitList works correctly: first row containing ona office loc details 1`] = `
<td
  class="ant-table-cell"
>
  Ona Office Sub Location
</td>
`;

exports[`location-management/src/components/LocationUnitList works correctly: first row containing ona office loc details 2`] = `
<td
  class="ant-table-cell"
>
  Root FHIR Location
</td>
`;

exports[`location-management/src/components/LocationUnitList works correctly: first row containing ona office loc details 3`] = `
<td
  class="ant-table-cell"
>
  Jurisdiction
</td>
`;

exports[`location-management/src/components/LocationUnitList works correctly: first row containing ona office loc details 4`] = `
<td
  class="ant-table-cell"
>
  active
</td>
`;

exports[`location-management/src/components/LocationUnitList works correctly: first row containing ona office loc details 5`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex justify-content-end align-items-center Actions"
  >
    <a
      href="/admin/location/unit/edit/303"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 1`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary"
        >
          Name
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography"
        >
          Ona Office Sub Location
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 2`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary"
        >
          Status
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography"
        >
          active
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 3`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary"
        >
          Description
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography"
        >
          The Sub location
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 4`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary"
        >
          Physical Type
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography"
        >
          Jurisdiction
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 5`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary"
        >
          Alias
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography"
        >
          ona office
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: user defined root location 1`] = `
<span
  title="Ona Office Sub Location"
>
  Ona Office Sub Location
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expand 1`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Ona Office Sub Location"
  >
    Ona Office Sub Location
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expand 2`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Level 0"
  >
    Level 0
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expand 3`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Arundel mobile clinic"
  >
    Arundel mobile clinic
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expand 4`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Part Of Sub Location"
  >
    Part Of Sub Location
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 1`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Ona Office Sub Location"
  >
    Ona Office Sub Location
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 2`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Level 0"
  >
    Level 0
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 3`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Arundel mobile clinic"
  >
    Arundel mobile clinic
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 4`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Part Of Sub Location"
  >
    Part Of Sub Location
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 5`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Nairobii"
  >
    Nairobii
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 6`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Sub Loc"
  >
    Test Sub Loc
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 7`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Loc 113"
  >
    Test Loc 113
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 8`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Loc 1145"
  >
    Test Loc 1145
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 9`] = `
<span
  class="ant-tree-title"
>
  <span
    title="MOH HQ 2"
  >
    MOH HQ 2
  </span>
</span>
`;
